--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0.39"
 alembic = "^1.15.1"
 psycopg2 = "^2.9.10"
 alembic-postgresql-enum = "^1.7.0"
+faker = "^37.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
